new changes in route page

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 NODE_ENV = development
 VUE_APP_OUTPUT_DIR = C:/dev/test/dev
 VUE_APP_INDEX_PATH = ../src/main/resources/static/index.html
+ROUTE_BASE_PATH=http://10.110.203.194:8989/routes/v1
