--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 NODE_ENV = production
 VUE_APP_OUTPUT_DIR = /home/ec2-user/backoffice/frontend/www
 VUE_APP_INDEX_PATH = /home/ec2-user/backoffice/frontend/www/index.html
+GOOGLE_MAP_API_KEY=AIzaSyAjblGXuplG4T7f3iPxn5NuGulNrQisKno
